Adapt mainly by fixing some compilation errors